--- a/src/client/style.css
+++ b/src/client/style.css
@@ -1,13 +1,13 @@
 body{
-	font-size: 20px;
 	margin: 0;
-	background-image: url("stripes-light.png");
-	color: #FBFEFB;
 }
 
 .container{
 	width: 100%;
 	height: 100%;
+	background-image: url("stripes-light.png");
+	font-size: 20px;
+	color: #FBFEFB;
 }
 
 .topbar{
@@ -34,7 +34,7 @@ body{
 }
 
 .editor{
-	height: calc(100vh - 92px);
+	height: calc(100vh - 94px);
 	color: #000000;
 	font-family: 'Roboto Mono', monospace;
 	width: 60%;
@@ -53,5 +53,14 @@ button{
 	color: #FBFEFB;
 	margin-right: 30px;
 	font-family: 'Roboto Mono', monospace;
+}
+
+textarea{
+	overflow: hidden;
+	border: none;
+	outline: none;
+	margin: 75px;
+	width: calc(100% - 150px);
+	height: calc(100% - 159px);
 
 }
