--- a/src/client/style.css
+++ b/src/client/style.css
@@ -25,7 +25,7 @@ body{
 
 .options{
 	width: 100%;
-	height: 30px;
+	height: 55px;
 	padding-bottom: 5px;
 	padding-top: 5px;
 	background-color: #424242;
@@ -51,11 +51,13 @@ body{
 
 button{
 	border: 1px solid #E5E5E5;
-	width: 150px;
+	width: 170px;
 	font-size: 13px;
 	background-color: #213131;
 	color: #FBFEFB;
-	margin-right: 30px;
+	margin-right: 40px;
+	margin-bottom: 10px;
+
 	font-family: 'Roboto Mono', monospace;
 }
 
