--- a/src/client/style.css
+++ b/src/client/style.css
@@ -1,5 +1,6 @@
 body{
 	margin: 0;
+	font-family: 'Roboto Mono', monospace;
 }
 
 .container{
@@ -25,18 +26,69 @@ body{
 
 .options{
 	width: 100%;
-	height: 55px;
-	padding-bottom: 5px;
-	padding-top: 5px;
+	height: 45px;
+	padding-bottom: px;
+	padding-top: 10px;
 	background-color: #424242;
-	text-align: center;
 	border-bottom: 2px solid #E5E5E5;
+	text-align: center;
+
+}
+
+ol{
+	padding: 0;
+	margin: 0;
+	list-style-type: none;
+	font-size: 13px;
+}
+
+ol > li {
+	display: inline-block;
+	margin-right: 55px;
+}
+
+ol > li button{
+	height: 32px;
+	border: 1px solid #E5E5E5;
+	width: 170px;
+	font-size: 13px;
+	background-color: #213131;
+	color: #FBFEFB;
+
+	font-family: 'Roboto Mono', monospace;
+}
+
+ol > li select{
+	height: 32px;
+	border: 1px solid #E5E5E5;
+	width: 170px;
+	font-size: 13px;
+	background-color: #213131;
+	color: #FBFEFB;
+	font-family: 'Roboto Mono', monospace;
+}
+
+
+ol > li input[type=text]{
+	padding: 0;
+	padding-left: 2px;
+	height: 30px;
+	border: 1px solid #E5E5E5;
+	width: 170px;
+	font-size: 13px;
+	background-color: #213131;
+	color: #FBFEFB;
+	margin-right: 40px;
+	font-family: 'Roboto Mono', monospace;
+}
+
+ol > li input[type=text]::placeholder{
+	color: #E5E5E5;
 }
 
 .editor{
 	height: calc(100vh - 94px);
 	color: #000000;
-	font-family: 'Roboto Mono', monospace;
 	width: 60%;
 	margin-left: auto;
 	margin-right: auto;
@@ -45,23 +97,8 @@ body{
 	border-right: 2px solid #E5E5E5;
 }
 
-::selection{
-	background: #E5E5E5;
-}
-
-button{
-	border: 1px solid #E5E5E5;
-	width: 170px;
-	font-size: 13px;
-	background-color: #213131;
-	color: #FBFEFB;
-	margin-right: 40px;
-	margin-bottom: 10px;
-
-	font-family: 'Roboto Mono', monospace;
-}
-
-textarea{
+#textarea{
+	border-radius: 0px;
 	overflow: auto;
 	border: none;
 	font-family: 'Chakra Petch', sans-serif;
@@ -71,20 +108,18 @@ textarea{
 	height: calc(100% - 159px);
 }
 
-
-.listButton {
-	display: inline-block;
+::selection{
+	background: #E5E5E5;
 }
 
 #checkboxes {
 	display: none;
 	position: absolute;
 	border: 1px solid #E5E5E5;
-	width: 148px;
-	font-size: 11px;
+	width: 168px;
+	font-size: 9px;
 	background-color: #213131;
 	color: #FBFEFB;
-	font-family: 'Roboto Mono', monospace;
 }
 
 #checkboxes label {
@@ -96,12 +131,85 @@ textarea{
 	background-color: #E5E5E5;
 	color: black;
 }
-.dropdown{
-	display: inline-block;
+
+.connected button{
+	border-right: none;
+	width: 25px;
+	margin-right: 0px;
 }
 
-#lang select{
-	width: 100px;
-	height: 500px;
+.connected button:nth-child(2){
+	border-left: none;
 }
 
+
+.connected select{
+	border-left: none;
+}
+
+.connected input[type=text]{
+	border-left: none;
+}
+
+
+
+
+
+
+
+
+
+/*.hwt-container {*/
+	/*height: calc(100vh - 94px);*/
+	/*width: 100%;*/
+	/*display: inline-block;*/
+	/*position: relative;*/
+	/*overflow: hidden !important;*/
+	/*-webkit-text-size-adjust: none !important;*/
+/*}*/
+
+/*.hwt-backdrop {*/
+	/*margin: 75px;*/
+	/*width: calc(100% - 150px);*/
+	/*height: calc(100% - 159px);*/
+	/*position: absolute !important;*/
+	/*top: 0 !important;*/
+	/*right: -99px !important;*/
+	/*bottom: 0 !important;*/
+	/*left: 0 !important;*/
+	/*padding-right: 99px !important;*/
+	/*overflow-x: hidden !important;*/
+	/*overflow-y: auto !important;*/
+/*}*/
+
+/*.hwt-highlights {*/
+	/*font-family: 'Chakra Petch', sans-serif;*/
+	/*width: auto !important;*/
+	/*height: auto !important;*/
+	/*border-color: transparent !important;*/
+	/*white-space: pre-wrap !important;*/
+	/*word-wrap: break-word !important;*/
+	/*color: transparent !important;*/
+	/*overflow: hidden !important;*/
+/*}*/
+
+/*.hwt-input {*/
+	/*display: block !important;*/
+	/*position: relative !important;*/
+	/*margin: 0;*/
+	/*padding: 0;*/
+	/*border-radius: 0;*/
+	/*font: inherit;*/
+	/*overflow-x: hidden !important;*/
+	/*overflow-y: auto !important;*/
+/*}*/
+
+/*.hwt-content {*/
+	/*border: 1px solid;*/
+	/*background: none transparent !important;*/
+/*}*/
+
+/*.hwt-content mark {*/
+	/*padding: 0 !important;*/
+	/*color: inherit;*/
+/*}*/
